@@ -1,9 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 AUX libfishsound-1.0.0-pc.patch 406 RMD160 06ba70bf4eea4c582c59b135064d711da4230c26 SHA1 b3331f83ef733753a49e64ddbac58dd981ca1ee0 SHA256 d112dd62dfa8b76d9750a9ba5daae8c21248e948151aed6c8977283fefc02f26
 DIST libfishsound-0.9.1.tar.gz 485127 RMD160 1fc64b0ddf455401aa75544cebaf671bd7505f88 SHA1 1c587f55265a024911442a61b538c308f1f185c0 SHA256 2f2d651bb106509abd662a0cfd55769a323a0d0bd33c1cc56a4756f3b1693368
 DIST libfishsound-0.9.2.tar.gz 436119 RMD160 07972b131ee1bb681217b591697cf1bff275c8f2 SHA1 579875a51f51cdf85ecf60d15aac15534cb9a23a SHA256 ddc3eba9ca33abe5e613579079bf8a4978a5ada46722b2e99572819aaffc6642
 DIST libfishsound-1.0.0.tar.gz 444980 RMD160 49919da94696932ca88cc81bcc317a434ce67bc9 SHA1 5263dfaa12dce71e30c5d80f871d92869c6b5ce2 SHA256 2e0b57ce2fecc9375eef72938ed08ac8c8f6c5238e1cae24458f0b0e8dade7c7
 EBUILD libfishsound-0.9.1.ebuild 1161 RMD160 a09e9c96f6bd7440eb501963e879256ce943a2cf SHA1 92f405ad12cd315de93ccdb5d59e16d83b45c840 SHA256 c224dc37209aa86f3cc3d7476b576c2488b3b5c551eff7061b9a0a03ba4d154a
 EBUILD libfishsound-0.9.2.ebuild 1399 RMD160 6a50bf9a3380756d24925dbff1276319de959188 SHA1 0e4a2a99ef37caf7bd40e9d18f7d0d106dfdda2a SHA256 e176e8dd74a257087a6b5557546214c22e70f8c3d3316f1088bc0c01ae6c8c6a
-EBUILD libfishsound-1.0.0.ebuild 1113 RMD160 d3c5a880271d40243aa224991db3a80d3af3a8fe SHA1 56ca8bc5cb291fd1d037b3ce149990ef137dc5ee SHA256 369b2edf08930db0093eb2ec3e413b7d73845af601a2961151859de40e1fc67f
-MISC ChangeLog 2102 RMD160 b7ee16d9344eef19d677ec3ba01da019ee432bcb SHA1 26c62ee35bb0edf50253a198db3825fc280c7501 SHA256 77ffc93dffb4fdaf9cd3a9f1a08596c3bd356db041854d93318499e4f6d55cf4
+EBUILD libfishsound-1.0.0.ebuild 1142 RMD160 04e3d7a83c77c02e675a46b8f498aa9dc2f8626e SHA1 9c7dbe34da17f0d7e4bd5e76e9e97ace7022311f SHA256 a5da6bf33df2fcf392a29ba2c60036d20383246c85bec19a36a73f83f0e93068
+MISC ChangeLog 2231 RMD160 639aafa930cf4bcfb26f907c8d2e44e306977bc8 SHA1 e38aa70630420f7926002da5310f9ddcc799c75e SHA256 7acec0cb080d0ec265e1b65c3d797834a64c84d1ed6ad24e47155ceb421292c8
 MISC metadata.xml 160 RMD160 10be84fed28405abd22adc6689e87e5bb77e3501 SHA1 0c1bb16a7cc376ef35b87d8699ec9504718d36b9 SHA256 6bafe4a5c7b42309f124ebc2a9d78ebe5379aec4dcdc88c0bda2ab79c9851a6b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iQEcBAEBCgAGBQJPvO1hAAoJEO+t9ga+3I3a/8AIAMXEiAMA0HqP4PvNj5X+RAWK
+MhQx/UAUYl4uZXw+7GXfJM/5q2wN/daU/BgNgYFUfGeDOS5r/WtlSsfR0Otp/+Ph
+P8gREvVx1+/2sQ+RgfbvXIks9OMTH51d12/d161UPu8G/BCB8018SAP0qZy3S6/R
+2Zc0YFwhuO+D2lmgWT7zu8Y6/oSFbrAB/5h8S8u3shaPHpshGP+ZlxZMeGnjkCtU
+J3cuHopIm1drNwe9ZLiBJgppi7mscCUskfDSP59yaOVdVh3gd2UzQyGlw+Hee+Qm
+BEqwi3ILPZJUMBLwOFBzRoIohb3Y6gq+iHMhOkjgLVbUJdN84QEkGmwll6mqKpA=
+=Rifs
+-----END PGP SIGNATURE-----
