@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libfishsound
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libfishsound/ChangeLog,v 1.12 2012/05/05 08:02:35 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libfishsound/ChangeLog,v 1.13 2012/05/23 13:58:15 johu Exp $
+
+  23 May 2012; Johannes Huber <johu@gentoo.org> libfishsound-1.0.0.ebuild:
+  Restrict tests for now, acked by yngwin bug #395153.
 
   05 May 2012; Jeff Horelick <jdhore@gentoo.org> libfishsound-0.9.2.ebuild,
   libfishsound-1.0.0.ebuild:
